# rust-belajar-tegar

./: .env  Cargo.toml
src/: main.rs
src/backend/: mod.rs
src/backend/auth/handlers/: mod.rs
src/backend/database/: mod.rs
src/backend/models/: mod.rs
src/backend/utils/: mod.rs
src/hari1_pengantar_rust/: README.md  day1_basic.rs
src/hari2_control_flow/: README.md  day2_control.rs
src/hari3_ownership/: README.md  day3_ownership.rs
src/hari4_struct_enum/: README.md  day4_struct_enum.rs
src/hari5_collections_error/: README.md  day5_collections_error.rs  sample.txt
